tests/samples/negative/control_flow/for_in_unsupported.ax
module for_in_unsupported;

fn main() -> i32 {
    for i in items() {
        return i;
    }
    return 0;
}
